# phantomci

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.yaml
examples/: workflow.toml
examples/docker/: Dockerfile  docker-compose.yaml
examples/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml
scripts/: test.sh
src/: main.rs
src/app/: mod.rs  service.rs  state.rs
src/database/: job.rs  joblog.rs  mod.rs
src/logging/: mod.rs
src/options/: mod.rs
src/parser/: mod.rs
src/repo/: mod.rs
src/scm/: mod.rs
src/util/: mod.rs  service.rs
src/webhook/: custom_webhook.rs  discord.rs  mod.rs  slack.rs
