[package]
name = "phantom_ci"
version = "0.1.308"
edition = "2021"
description = "Secure Headless Self-Hosted Runner"
keywords = ["self-hosted", "git", "scm", "cicd"]
authors = ["james@koonts.net"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
discord-webhook-lib = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
whoami = "2.0.0-pre.2"
