[package]
name = "phantom_ci"
version = "0.1.4"
edition = "2021"
description = "Secure Headless Self-Hosted Runner"
keywords = ["self-hosted", "git", "scm", "cicd"]
authors = ["james@koonts.net"]
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = "0.15"
discord-webhook-lib = "0.2.3"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whoami = "2.0.0-pre.3"
