[package]
name = "phantom_ci"
version = "0.2.0"
edition = "2021"
description = "Secure Headless Self-Hosted Runner"
keywords = ["self-hosted", "git", "scm", "cicd"]
authors = ["james@koonts.net"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
discord-webhook-lib = "0.2.3"
dotenv = "0.15"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
whoami = "2.0.1"
